Prebuild is an XML-driven pre-build tool allowing developers to easily generate project or make files for major IDE's and .NET development tools including: Visual Studio 2005, Visual Studio 2003, Visual Studio 2002, SharpDevelop, MonoDevelop, and NAnt.

Documentation and downloads are available at http://dnpb.sourceforge.net.

Prebuild is licensed under the BSD license.

[ July 19, 2006 - 1.3.1 ]
	! VS2005 fixes from Rob Loach
	! NAnt fixes from Rob Loach and David Hudson
	! XML doc fixes from Rob Loach
	+ Added SharpDevelop2 target (really just uses VS2005 target)
	! Fixed bug with BuildEvents in Monodevelop target

[ February 28, 2006 - 1.3 ]
	+ Added MonoDevelop target.
	+ Added NAnt target.
	+ Lots of fixes to all targets.
	* Cleaned up the code using FXCop.
	* Updated schema to 1.6 to fix a typo and add a new parameter.
	* jendave is now the maintainer of the project. RobLoach has been added as a developer.
	* Removed references to 'dnpb'.
	+ Added rudimentary support for pre- and post- build scripts
	* Updated examples.

[ August 5, 2004 - 1.2 ]
	+ Added Visual Studio Express (vs2005express) target contributed by Borrillis and modified for use with different languages
	+ Added the allowedgroups command line option followed by a pipe-delimited list of project group filter flags (eg. Group1|Group2) allow optional filtering of all projects that dont have at least one of these flags
	+ Added the filterGroups XML attribute to the project node and updated the scheme to v1.5 for this addition, it is used to specified the delimited list of filter groups to which a project belongs
	* Modified the removedir command line option to allow for a pipe-delimited list of directory names
	! Modified the resource loading code to search for resourced without the prepended namespace (as Visual Studio .NET does it) to allow for it to be compiled with SharpDevelop as well
	+ Added the GenerateXmlDocFile boolean option to the Options XML element