@@ -1,0 +1,2 @@
+[InternetShortcut]
+URL=http://dnpb.sourceforge.net
