@@ -107,7 +107,8 @@ namespace Prebuild
 			Console.WriteLine("/file			XML	file to	process");
 			Console.WriteLine("/log				Log	file to	write to");
 			Console.WriteLine("/ppo				Pre-process	the	file, but perform no other processing");
-			Console.WriteLine("/pause			Pauses the application after execution to view the output");
+            Console.WriteLine("/pause			Pauses the application after execution to view the output");
+            Console.WriteLine("/yes			    Default to yes to any questions asked");
 			Console.WriteLine();
 			Console.WriteLine("See 'prebuild /showtargets for a	list of	available targets");
 			Console.WriteLine("See readme.txt or check out http://dnpb.sourceforge.net for more information");
